--- a/index.html
+++ b/index.html
@@ -6,36 +6,37 @@
 </head>
 <body>
     <div class="container">
-        <h4>Carrito de compras</h4>
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Item</th>
-              <th scope="col">Cantidad</th>
-              <th scope="col">Acción</th>
-              <th scope="col">Total</th>
-            </tr>
-          </thead>
-          <tbody id="items"></tbody>
-          <tfoot>
-            <tr id="footer">
-              <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
-            </tr>
-          </tfoot>
-        </table>
-        <h4>Cards</h4>
+        <h4 class="text-center my-3 p-0 fs-2"><b>Carrito de compras</b></h4>
+        <hr>
+        <h4 class="fs-4"><b>Productos:</b></h4>
         <div class="row" id="cards"></div>
       </div>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Item</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Acción</th>
+            <th scope="col">Total</th>
+          </tr>
+        </thead>
+        <tbody id="items"></tbody>
+        <tfoot>
+          <tr id="footer">
+            <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
+          </tr>
+        </tfoot>
+      </table>
 
     <template id="template-card">
-        <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <div class="col-6 col-sm-6 col-md-4 col-lg-2 mb-2">
           <div class="card">
             <img src="" alt="" class="card-img-top">
             <div class="card-body">
               <h5>Titulo</h5>
               <p>$</p>
-              <button class="btn btn-dark">Comprar</button>
+              <button id="agregar" class="btn btn-dark">Comprar</button>
             </div>
           </div>
         </div>
@@ -45,7 +46,7 @@
         <th scope="row" colspan="2">Total productos</th>
         <td>10</td>
         <td>
-            <button class="btn btn-danger btn-sm" id="vaciar-carrito">
+            <button class="btn btn-sm btn-danger" id="vaciar-carrito">
                 vaciar todo
             </button>
         </td>
@@ -58,10 +59,10 @@
         <td>Café</td>
         <td>1</td>
         <td>
-            <button class="btn btn-info btn-sm">
+            <button id="mas" class="btn btn-info btn-sm">
                 +
             </button>
-            <button class="btn btn-danger btn-sm">
+            <button id="menos" class="btn btn-danger btn-sm">
                 -
             </button>
         </td>
